[package]
name = "titech-portal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
curl = "0.4.44"
reqwest = { version = "0.11" , features = ["cookies"]}
reqwest_cookie_store = "0.5.0"
scraper = "*"
tokio = { version = "1.9", features = ["full"] }
